Get production ready with Actuator

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 spring.application.name=learn-spring-boot
-logging.level.org.springframework=trace
+logging.level.org.springframework=debug
 
 currency-service.url=http://dev.in28minutes.com
 currency-service.username=devusername
